[gd_scene load_steps=12 format=2]

[ext_resource path="res://structures/props/vegetation/Bush.gd" type="Script" id=1]
[ext_resource path="res://effects/Shadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/props/grass/grass_bush_1.png" type="Texture" id=3]
[ext_resource path="res://overlap/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/music/props/trees/Bush_1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/music/props/trees/Bush_2.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/shaders/Sway.gdshader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=68]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/speed = 1.0
shader_param/minStrength = 0.03
shader_param/maxStrength = 0.01
shader_param/strengthScale = 40.0
shader_param/interval = 10.0
shader_param/detail = 1.0
shader_param/distortion = 0.0
shader_param/heightOffset = 0.0
shader_param/offset = 2.0

[sub_resource type="Shader" id=66]
code = "// Hey this is Hei! This shader \"fakes\" a 3D-camera perspective on CanvasItems.
// License: MIT

shader_type canvas_item;
render_mode unshaded;

// Camera FOV
uniform float fov : hint_range(1, 179) = 90;
uniform bool cull_back = true;
uniform float y_rot : hint_range(-180, 180) = 0.0;
uniform float x_rot : hint_range(-180, 180) = 0.0;
// At 0, the image retains its size when unrotated.
// At 1, the image is resized so that it can do a full
// rotation without clipping inside its rect.
uniform float inset : hint_range(0, 1) = 0.0;
// Consider changing this to a uniform and changing it from code
uniform vec2 rect_size;
uniform float tang : hint_range(0,1) = 0.0;

varying flat vec2 o;
varying vec3 p;

const float PI = 3.14159;

// Creates rotation matrix
void vertex(){
	float sin_b = sin(y_rot / 180.0 * PI);
	float cos_b = cos(y_rot / 180.0 * PI);
	float sin_c = sin(x_rot / 180.0 * PI);
	float cos_c = cos(x_rot / 180.0 * PI);
	
	mat3 inv_rot_mat;
	inv_rot_mat[0][0] = cos_b;
	inv_rot_mat[0][1] = 0.0;
	inv_rot_mat[0][2] = -sin_b;
	
	inv_rot_mat[1][0] = sin_b * sin_c;
	inv_rot_mat[1][1] = cos_c;
	inv_rot_mat[1][2] = cos_b * sin_c;
	
	inv_rot_mat[2][0] = sin_b * cos_c;
	inv_rot_mat[2][1] = -sin_c;
	inv_rot_mat[2][2] = cos_b * cos_c;
	
	
	float t = tan(fov / 360.0 * PI);
	p = inv_rot_mat * vec3((UV - 0.5), 0.5 / t);
	float v = (0.5 / t) + 0.5;
	p.xy *= v * inv_rot_mat[2].z;
	o = v * inv_rot_mat[2].xy;
	
	VERTEX += UV * rect_size * tang * (1.0 - inset);
	//VERTEX += (UV - 0.5) / TEXTURE_PIXEL_SIZE * t * (1.0 - inset);
}

void fragment() {
	
	if (cull_back && p.z <= 0.0) discard;
	vec2 uv = (p.xy / p.z).xy - o; 
    COLOR = texture(TEXTURE, uv + 0.5);
	COLOR.a *= step(max(abs(uv.x), abs(uv.y)), 0.5);
}"

[sub_resource type="ShaderMaterial" id=67]
resource_local_to_scene = true
shader = SubResource( 66 )
shader_param/fov = 1.0
shader_param/cull_back = true
shader_param/y_rot = 2.417
shader_param/x_rot = 9.714
shader_param/inset = 0.0
shader_param/rect_size = Vector2( 50, 50 )
shader_param/tang = 0.047

[sub_resource type="CapsuleShape2D" id=69]
radius = 6.23596
height = 17.5039

[node name="Bush" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 68 )
position = Vector2( -1, -32 )
texture = ExtResource( 3 )
hframes = 4

[node name="Shadow" parent="." instance=ExtResource( 2 )]
material = SubResource( 67 )
position = Vector2( -1.07507, -7.54665 )
z_index = -1
texture = ExtResource( 3 )
offset = Vector2( -16.6611, -55.7602 )
hframes = 4

[node name="Bush1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, -4 )
stream = ExtResource( 5 )
max_distance = 200.0
attenuation = 0.870551

[node name="Bush2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -4 )
stream = ExtResource( 6 )
max_distance = 200.0
attenuation = 0.707107

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]
collision_mask = 34
monitorable = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
position = Vector2( -2, -6 )
rotation = 1.53065
shape = SubResource( 69 )

[connection signal="body_entered" from="SoftCollision" to="." method="_on_SoftCollision_body_entered"]

[editable path="SoftCollision"]
